Closed
Bug 233105
Opened 22 years ago
Closed 22 years ago
cancelling a download crashes
Categories
(SeaMonkey :: Download & File Handling, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla1.7alpha
People
(Reporter: Biesinger, Assigned: Biesinger)
Details
(Keywords: crash, regression)
Attachments
(1 file)
|
2.83 KB,
patch
|
neil
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
nsDownloadManager::CancelDownload calls DownloadEnded, which removes the
downlaod from the hashtable and releases the reference... CancelDownload still
has a weak reference, uses it to access the download object, and crashes.
| Assignee | ||
Comment 1•22 years ago
|
||
additional changes: Do not use .Get in this file, only use GetWeak - saves some
codesize
| Assignee | ||
Updated•22 years ago
|
Attachment #140633 -
Flags: review?(neil.parkwaycc.co.uk)
| Assignee | ||
Updated•22 years ago
|
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla1.7alpha
| Assignee | ||
Updated•22 years ago
|
Severity: normal → critical
Comment 2•22 years ago
|
||
Comment on attachment 140633 [details] [diff] [review]
patch
Nice cleanup too.
Attachment #140633 -
Flags: review?(neil.parkwaycc.co.uk) → review+
| Assignee | ||
Updated•22 years ago
|
Attachment #140633 -
Flags: superreview?(bzbarsky)
Comment 3•22 years ago
|
||
Comment on attachment 140633 [details] [diff] [review]
patch
Sure. sr=bzbarsky
Attachment #140633 -
Flags: superreview?(bzbarsky) → superreview+
| Assignee | ||
Comment 4•22 years ago
|
||
checked in
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Updated•21 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•