bug 233105, keep a reference before removing the download, to not crash r=neil sr=bz